Fix double scrollbar
[MAILPOET-5262]

--- a/mailpoet/assets/css/src/components-plugin/_premium-page.scss
+++ b/mailpoet/assets/css/src/components-plugin/_premium-page.scss
@@ -21,6 +21,12 @@
   }
 }
 
+.admin_page_mailpoet-landingpage {
+  #wpfooter {
+    background: $color-grey-0;
+  }
+}
+
 .mailpoet-premium-page {
   color: $color-tertiary;
   margin: $grid-gap-large auto 0;
